--- a/styles/lab04.css
+++ b/styles/lab04.css
@@ -11,3 +11,10 @@ last modified: [15/04/2025]
 description: [lab04.html]
 
 */
+
+h1 { 
+    color: purple; 
+    font-size: 2em; 
+    font-weight: bold; 
+}
+    
