--- a/styles/lab04.css
+++ b/styles/lab04.css
@@ -17,4 +17,61 @@ h1 {
     font-size: 2em; 
     font-weight: bold; 
 }
-    
+* { font-family: calibri, sans-serif; }    
+
+/* default color for all elements */
+* {
+    color: #2F4F4F;
+}
+
+h2 {
+    color: rgb(0, 128, 128);
+    font-weight: bold;
+    font-size: 1.5em;
+}
+
+aside, footer { font-style: italic; }     
+
+h1, h2, h3 {
+    font-family: Arial, sans-serif;
+}
+
+table, th, td {
+    border: 1px solid black;
+}
+
+#images {
+    text-align: center; 
+}
+
+#section-heading {
+    color: red;
+}
+
+.special {
+    color: darkorange;
+    font-weight: bold;
+}
+
+.right-align {
+    text-align: right;
+}
+
+nav a {
+    text-decoration: none;
+    padding:0.2em 0.6em;
+    border: 4px solid #ccc;
+   }      
+
+   ol ul {
+    list-style-type: square;
+}
+
+aside:hover {
+    visibility: hidden;
+}
+
+ul li:hover {
+    background-color: lightblue;
+    border-color: darkblue;
+}
